--- a/qtpass.desktop
+++ b/qtpass.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Type=Application
 Name=QtPass
+Version=1.0
 Comment=GUI for the standard unix password store
 Exec=qtpass
 Icon=qtpass-icon
