--- a/Info.plist
+++ b/Info.plist
@@ -11,7 +11,10 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleGetInfoString</key>
-	<string>GUI for the standard unix password store</string>
+	<string>@SHORT_VERSION@</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2014-2015 IJhack
+This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</string>
 	<key>CFBundleShortVersionString</key>
 	<string>@SHORT_VERSION@</string>
 	<key>CFBundleSignature</key>
