--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ before_install:
   - cd ..
 
 script:
-  - cd IJHack/qtpass
+  - pwd
+  - cd ~/IJHack/qtpass
   - ~/Qt5.2.0/5.2.0/gcc_64/bin/qmake -v
   - ~/Qt5.2.0/5.2.0/gcc_64/bin/qmake -spec linux-$QtMkspec -Wall qtpass.pro
   - make -j$(nproc)
