Added Travis and the pass subtitle. Removed the dmg build flag from Mac install comment. Changed Travis to only report on failure and success change states.

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,5 +32,5 @@ notifications:
   irc: 
     channels:
       - "chat.freenode.net#IJhack"
-    on_success: always
+    on_success: change
     on_failure: always
