--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_install:
 script:
   - cd qtpass
   - ~/Qt5.2.0/5.2.0/gcc_64/bin/qmake -v
-  - ~/Qt5.2.0/5.2.0/gcc_64/bin/qmake -spec linux-$QtMkspec -Wall QMAKE_CXXFLAGS+=coverage qtpass.pro
+  - ~/Qt5.2.0/5.2.0/gcc_64/bin/qmake -spec linux-$QtMkspec -Wall qtpass.pro
   - make -j$(nproc)
 
 notifications:
@@ -44,5 +44,3 @@ matrix:
   allow_failures:
     - os: osx
 
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
