--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: cpp
+sudo: false
 
 os:
   - linux
@@ -8,30 +9,12 @@ compiler:
   - gcc
   - clang
 
-before_install:
-  - QtMkspec=$CC
-  - $CC --version
-
-install
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
-      sudo apt-add-repository -y ppa:ubuntu-toolchain-r/test
-      && sudo apt-add-repository -y ppa:beineri/opt-qt541
-      && sudo apt-get -qq update
-      && sudo apt-get -qq install g++-4.8 libc6-i386 qt54tools qt54svg qt54webkit
-      && export CXX="g++-4.8"
-      && export CC="gcc-4.8"
-      ;
-    else
-         brew update
-      && brew unlink cmake
-      && brew install cmake
-      && brew install qt5
-      && chmod -R 755 /usr/local/opt/qt5/*
-      ;
-    fi
+addons:
+  apt:
+    packages:
+    - qt5-default
 
 script:
-  - cd qtpass
   - qmake -v
   - qmake -spec linux-$QtMkspec -Wall qtpass.pro
   - make -j$(nproc)
