--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,6 @@ compiler:
   - gcc
   - clang
 
-before_install:
-  - QtMkspec=$CC
-
 addons:
   apt:
     packages:
@@ -19,7 +16,7 @@ addons:
 
 script:
   - qmake -v
-  - qmake -spec linux-$QtMkspec -Wall qtpass.pro
+  - qmake -Wall qtpass.pro
   - make -j$(nproc)
 
 notifications:
