--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: qtpass
-Section: utilities
+Section: utils
 Priority: optional
 Maintainer: Anne Jan Brouwer <brouwer@annejan.com>
 Build-Depends: qt5-default, qt5-qmake
