--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,8 @@
 os: unstable
+install:
+  # Configuring Qt
+  - set QTDIR=C:\Qt\5.4\mingw491_32
+  - set PATH=%QTDIR%\bin;C:\MinGW\bin;%PATH%
 build_script:
  - qmake qtpass.pro
  - mingw32-make
