--- a/.travis.yml
+++ b/.travis.yml
@@ -1,34 +1,40 @@
 language: cpp
 sudo: false
-
 os:
-  - linux
-  - osx
-
+- linux
+- osx
 compiler:
-  - gcc
-  - clang
-
+- gcc
+- clang
 addons:
   apt:
     packages:
     - qt5-default
-
 install:
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew ls | grep -wq qt5 || brew install qt5; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export PATH=$PATH:/usr/local/opt/qt5/bin; fi
-
+- if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update; fi
+- if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew ls | grep -wq qt5 || brew install qt5;
+  fi
+- if [ "$TRAVIS_OS_NAME" = "osx" ]; then export PATH=$PATH:/usr/local/opt/qt5/bin;
+  fi
 script:
-  - qmake -v
-  - qmake -Wall qtpass.pro
-  - make -j$(nproc)
-
+- qmake -v
+- qmake -Wall qtpass.pro
+- make -j$(nproc)
 notifications:
-  
-  irc: 
+  irc:
     channels:
-      - "chat.freenode.net#IJhack"
+    - chat.freenode.net#IJhack
     on_success: change
     on_failure: always
-
+env:
+  global:
+    secure: WaZq3f6KIAc0dnR4WOXYWDvUYiqlrzsZC/PQse47FnvC0oQC65J5w3kJOj/P26DgsUEqKQF3ukXogkM2mp5pS4+CMgivEmQmAbgQTtwcKpC5HPZxgI+8FgkCjcalJKWGWYoxlScNVNiKMs+89ApcSQE9kH9PZeUS9dukN2Php1U=
+addons:
+  coverity_scan:
+    project:
+      name: "IJHack/qtpass"
+      description: "Build submitted via Travis CI"
+    notification_email: brouwer@annejan.com
+    build_command_prepend: "qmake; make clean"
+    build_command:   "make -j$(nproc)"
+    branch_pattern: coverity_scan
