Automagic (pre) releasing

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,10 +5,19 @@ install:
   - choco install -y InnoSetup
   - set PATH=%QTDIR%\bin;C:\MinGW\bin;%PATH%;"C:\Program Files (x86)\Inno Setup 5"
 build_script:
- - qmake qtpass.pro
+ - qmake qtpass.pro CONFIG+=static
  - mingw32-make
  - copy README.md release/README.txt
  - copy LICENSE release/LICENSE.txt
  - iscc qtpass.iss
 artifacts:
   - path: QtPass_v*.exe
+deploy:
+  provider: GitHub
+  auth_token:
+    secure: YfscG1DR0+kApThPXxQSr+ZEjUOUlIG0Tqc5+90IFsUInyICRRMdbJsbxR2qhq/p
+  artifact: /QtPass_v[0-9]+\.[0-9]+\.[0-9]+\.exe/
+  draft: true
+  prerelease: false
+  on:
+    appveyor_repo_tag: true
