--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,8 +7,9 @@ install:
 build_script:
  - qmake qtpass.pro CONFIG+=static
  - mingw32-make
- - copy README.md release/README.txt
- - copy LICENSE release/LICENSE.txt
+after_build:
+ - cmd: copy README.md release/README.txt
+ - cmd: copy LICENSE release/LICENSE.txt
  - iscc qtpass.iss
 artifacts:
   - path: QtPass_v*.exe
