--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,8 +9,8 @@ build_script:
  - mingw32-make
 after_build:
  - dir /s /b
- - cmd: copy README.md release/README.txt
- - cmd: copy LICENSE release/LICENSE.txt
+ - cmd: copy README.md release\README.txt
+ - cmd: copy LICENSE release\LICENSE.txt
  - iscc qtpass.iss
 artifacts:
   - path: QtPass_v*.exe
