--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,16 +1,17 @@
 install:
   - set QTDIR=C:\Qt\5.5\mingw492_32
-  - choco install -y InnoSetup
-  - set PATH=%QTDIR%\bin;C:\MinGW\bin;%PATH%;"C:\Program Files (x86)\Inno Setup 5"
+#  - choco install -y InnoSetup
+#  - set PATH=%QTDIR%\bin;C:\MinGW\bin;%PATH%;"C:\Program Files (x86)\Inno Setup 5"
+  - set PATH=%QTDIR%\bin;C:\MinGW\bin;%PATH%
 build_script:
  - qmake qtpass.pro CONFIG+=static
  - mingw32-make
-after_build:
- - cmd: copy README.md release\README.txt
- - cmd: copy LICENSE release\LICENSE.txt
- - iscc qtpass.iss
+#after_build:
+# - cmd: copy README.md release\README.txt
+# - cmd: copy LICENSE release\LICENSE.txt
+# - iscc qtpass.iss
 artifacts:
-  - path: Output\qtpass-*.exe
+#  - path: Output\qtpass-*.exe
   - path: release\qtpass.exe
 deploy:
   provider: GitHub
