--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   fi
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export PATH=$PATH:/usr/local/opt/qt5/bin;
   fi
-- if [ "$TRAVIS_OS_NAME" = "osx" ]; then npm install -g appdmg
+- if [ "$TRAVIS_OS_NAME" = "osx" ]; then npm install -g appdmg;
   fi
 env:
   global:
