--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ install:
   fi
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export PATH=$PATH:/usr/local/opt/qt5/bin;
   fi
+- if [ "$TRAVIS_OS_NAME" = "osx" ]; then nvm install 5.1; nvm use 5.1;
+  fi
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then npm install -g appdmg;
   fi
 env:
