--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,6 @@ sudo: false
 os:
 - linux
 - osx
-node_js:
-  - "5.1"
 compiler:
 - gcc
 - clang
@@ -14,11 +12,10 @@ addons:
     - qt5-default
 install:
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update; fi
+- if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install node; fi
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew ls | grep -wq qt5 || brew install qt5;
   fi
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export PATH=$PATH:/usr/local/opt/qt5/bin;
-  fi
-- if [ "$TRAVIS_OS_NAME" = "osx" ]; then nvm install 5.1; nvm use 5.1;
   fi
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then npm install -g appdmg;
   fi
