--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ env:
     secure: WaZq3f6KIAc0dnR4WOXYWDvUYiqlrzsZC/PQse47FnvC0oQC65J5w3kJOj/P26DgsUEqKQF3ukXogkM2mp5pS4+CMgivEmQmAbgQTtwcKpC5HPZxgI+8FgkCjcalJKWGWYoxlScNVNiKMs+89ApcSQE9kH9PZeUS9dukN2Php1U=
 addons:
   apt:
+    sources:
+    - ubuntu-sdk-team
     packages:
     - qtbase5-dev
     - qttools5-dev-tools
