--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,12 @@ addons:
     - ubuntu-sdk-team
     - debian-sid
     packages:
+    - debian-keyring
+    - debian-archive-keyring
     - qt5-default
     - qt5-qmake
+    - libqt5svg5
+    
   coverity_scan:
     project:
       name: "IJHack/qtpass"
