lala creator, not gonna help, is it?

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,9 @@ env:
 addons:
   apt:
     sources:
-    - debian-sid
+    - ubuntu-sdk-team
     packages:
-    - qt5-default
-    - qt5-qmake
+    - qtcreator
   coverity_scan:
     project:
       name: "IJHack/qtpass"
