Distro dist: trusty

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ os:
 compiler:
 - gcc
 #- clang
+dist: trusty
 env:
   global:
     secure: WaZq3f6KIAc0dnR4WOXYWDvUYiqlrzsZC/PQse47FnvC0oQC65J5w3kJOj/P26DgsUEqKQF3ukXogkM2mp5pS4+CMgivEmQmAbgQTtwcKpC5HPZxgI+8FgkCjcalJKWGWYoxlScNVNiKMs+89ApcSQE9kH9PZeUS9dukN2Php1U=
@@ -14,7 +15,7 @@ addons:
     sources:
     - ubuntu-sdk-team
     packages:
-    - qtbase5-dev-tools
+    - qtbase5-dev
   coverity_scan:
     project:
       name: "IJHack/qtpass"
