--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: cpp
 sudo: true
 os:
 - linux
-#- osx
+- osx
 compiler:
 - gcc
-#- clang
+- clang
 env:
   global:
     secure: WaZq3f6KIAc0dnR4WOXYWDvUYiqlrzsZC/PQse47FnvC0oQC65J5w3kJOj/P26DgsUEqKQF3ukXogkM2mp5pS4+CMgivEmQmAbgQTtwcKpC5HPZxgI+8FgkCjcalJKWGWYoxlScNVNiKMs+89ApcSQE9kH9PZeUS9dukN2Php1U=
@@ -28,7 +28,7 @@ install:
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install pandoc; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then npm install -g appdmg; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -qq update; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -qq install qt56base qt56tools; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -qq install qt56base qt56toolsi libqt5svg5*; fi
 before_script:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then source /opt/qt56/bin/qt56-env.sh; fi
 script:
