--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,11 @@ AddOutputFilterByType DEFLATE text/text text/html text/plain text/xml text/css a
 </ifmodule>
 # END GZIP
 
+RewriteEngine On
+RewriteBase /
+RewriteCond %{HTTP_HOST} !^qtpass.org$ [NC]
+RewriteRule ^(.*)$ https://qtpass.org/$1 [L,R=301]
+
 ## EXPIRES CACHING ##
 <IfModule mod_expires.c>
 ExpiresActive On
