--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ addons:
     branch_pattern: coverity_scan
 install:
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update; fi
-- if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew unlink node; brew install node; fi
+#- if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew unlink node; brew install node; fi
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew ls | grep -wq qt5 || brew install qt5; fi
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export PATH=$PATH:/usr/local/opt/qt5/bin; fi
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install pandoc; fi
