--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: cpp
+dist: trusty
 sudo: true
 os:
 - linux
@@ -10,13 +11,13 @@ env:
   global:
     secure: WaZq3f6KIAc0dnR4WOXYWDvUYiqlrzsZC/PQse47FnvC0oQC65J5w3kJOj/P26DgsUEqKQF3ukXogkM2mp5pS4+CMgivEmQmAbgQTtwcKpC5HPZxgI+8FgkCjcalJKWGWYoxlScNVNiKMs+89ApcSQE9kH9PZeUS9dukN2Php1U=
 before_install:
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo add-apt-repository -y ppa:beineri/opt-qt561; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo add-apt-repository -y ppa:beineri/opt-qt57-trusty; fi
 addons:
   coverity_scan:
     project:
       name: IJHack/qtpass
       description: Build submitted via Travis CI
-    notification_email: brouwer@annejan.com
+    notification_email: travis@qtpass.org
     build_command_prepend: qmake; make clean
     build_command: make
     branch_pattern: coverity_scan
@@ -28,9 +29,9 @@ install:
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install pandoc; fi
 #- if [ "$TRAVIS_OS_NAME" = "osx" ]; then npm install -g appdmg; fi
 - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -qq update; fi
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -qq install qt56base qt56tools qt56svg; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -qq install qt57base qt57tools qt57svg; fi
 before_script:
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then source /opt/qt56/bin/qt56-env.sh; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then source /opt/qt57/bin/qt57-env.sh; fi
 script:
 - qmake -v
 - qmake -Wall qtpass.pro
