--- a/appdmg.json
+++ b/appdmg.json
@@ -4,7 +4,7 @@
   "background": "artwork/icon.png",
   "icon-size": 80,
   "contents": [
-    { "x": 64, "y": 64, "type": "file", "path": "QtPass.app" },
+    { "x": 64, "y": 64, "type": "file", "path": "src/QtPass.app" },
     { "x": 428, "y": 64, "type": "link", "path": "/Applications" },
     { "x": 64, "y": 448, "type": "file", "path": "README.rtf" },
     { "x": 428, "y": 448, "type": "file", "path": "LICENSE" }
