--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,8 +6,8 @@ build_script:
   - qmake qtpass.pro CONFIG+=static
   - mingw32-make
 #after_build:
-  - cmd: copy README.md release\README.txt
-  - cmd: copy LICENSE release\LICENSE.txt
+  - cmd: copy ../README.md release\README.txt
+  - cmd: copy ../LICENSE release\LICENSE.txt
   - iscc qtpass.iss
 artifacts:
   - path: Output\qtpass-*.exe
