switch to mingw version
xxxx

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,7 +1,7 @@
 install:
   - set QTDIR=C:\Qt\5.7\mingw53_32
   - choco install -y InnoSetup
-  - set PATH=%QTDIR%\bin;C:\MinGW\bin;%PATH%;"C:\Program Files (x86)\Inno Setup 5"
+  - set PATH=%QTDIR%\bin;C:\Qt\Tools\mingw530_32\bin;%PATH%;"C:\Program Files (x86)\Inno Setup 5"
 build_script:
   - qmake qtpass.pro CONFIG+=static
   - mingw32-make
