--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
   global:
     secure: WaZq3f6KIAc0dnR4WOXYWDvUYiqlrzsZC/PQse47FnvC0oQC65J5w3kJOj/P26DgsUEqKQF3ukXogkM2mp5pS4+CMgivEmQmAbgQTtwcKpC5HPZxgI+8FgkCjcalJKWGWYoxlScNVNiKMs+89ApcSQE9kH9PZeUS9dukN2Php1U=
 before_install:
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo add-apt-repository -y ppa:beineri/opt-qt${QT_BASE}-trusty; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo add-apt-repository -y ppa:beineri/opt-qt58-trusty; fi
 addons:
   coverity_scan:
     project:
@@ -22,7 +22,6 @@ addons:
     build_command: make
     branch_pattern: coverity_scan
 install:
-- export QT_BASE=58      
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update; fi
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew unlink node; brew install node; fi
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew ls | grep -wq qt5 || brew install qt5; fi
@@ -30,9 +29,9 @@ install:
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install pandoc; fi
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then npm install -g appdmg; fi
 - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -qq update; fi
-- if [ "$TRAVIS_OS_NAME" = "linux" && "$QT_BASE" != "48" ]; then sudo apt-get -qq install qt${QT_BASE}base qt${QT_BASE}tools qt${QT_BASE}svg; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" && "$QT_BASE" != "48" ]; then sudo apt-get -qq install qt58base qt58tools qt58svg; fi
 before_script:
-- if [ "$TRAVIS_OS_NAME" = "linux" && "$QT_BASE" != "48" ]; then source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" && "$QT_BASE" != "48" ]; then source /opt/qt${QT_BASE}/bin/qt58-env.sh; fi
 script:
 - qmake -v
 - qmake -Wall qtpass.pro
