--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,9 @@ install:
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install pandoc; fi
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then npm install -g appdmg; fi
 - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -qq update; fi
-- if [ "$TRAVIS_OS_NAME" = "linux" && "$QT_BASE" != "48" ]; then sudo apt-get -qq install qt58base qt58tools qt58svg; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -qq install qt58base qt58tools qt58svg; fi
 before_script:
-- if [ "$TRAVIS_OS_NAME" = "linux" && "$QT_BASE" != "48" ]; then source /opt/qt${QT_BASE}/bin/qt58-env.sh; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then source /opt/qt58/bin/qt58-env.sh; fi
 script:
 - qmake -v
 - qmake -Wall qtpass.pro
