--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,7 +12,7 @@ build_script:
   - iscc qtpass.iss
 artifacts:
   - path: Output\qtpass-*.exe
-  - path: src\release\qtpass.exe
+  - path: main\release\qtpass.exe
 deploy:
   provider: GitHub
   auth_token:
