--- a/qtpass.desktop
+++ b/qtpass.desktop
@@ -4,6 +4,7 @@ Name=QtPass
 Version=1.0
 GenericName=Password Manager
 #GenericName[ar_MA]=
+GenericName[ca]=Gestor de contrasenyes
 #GenericName[de_DE]=
 #GenericName[es_ES]=
 #GenericName[fr_BE]=
@@ -18,6 +19,7 @@ GenericName[nl_NL]=Wachtwoord Beheer
 #GenericName[zh_CN]=
 Comment=GUI for the standard unix password store
 #Comment[ar_MA]=
+Comment[ca]=Interfície gràfica per al magatzem de contrasenyes UNIX estàndard
 #Comment[de_DE]=
 #Comment[es_ES]=
 #Comment[fr_BE]=
