--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,9 @@ addons:
     branch_pattern: coverity_scan
 install:
 - sudo apt-get -qq update
-- sudo apt-get -qq install qt510base qt59tools qt59svg
+- sudo apt-get -qq install qt510base qt510tools qt510svg
 before_script:
-- source /opt/qt510/bin/qt59-env.sh
+- source /opt/qt510/bin/qt510-env.sh
 - qmake -v
 script:
 - qmake -Wall qtpass.pro
