--- a/qtpass.plist
+++ b/qtpass.plist
@@ -15,13 +15,13 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>@SHORT_VERSION@</string>
+	<string>1.2.3</string>
 	<key>CFBundleSignature</key>
 	<string>@TYPEINFO@</string>
 	<key>NOTE</key>
 	<string>QtPass is a multi-platform GUI for pass</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2014-2017 IJhack
+	<string>Copyright © 2014-2018 IJhack
 This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
