Improvements to Dutch translations (desktop file)

--- a/qtpass.desktop
+++ b/qtpass.desktop
@@ -12,7 +12,7 @@ GenericName[ca]=Gestor de contrasenyes
 #GenericName[gl_ES]=
 #GenericName[he_IL]=
 #GenericName[hu_HU]=
-GenericName[nl_NL]=Wachtwoord Beheer
+GenericName[nl]=Wachtwoordbeheerder
 #GenericName[pl_PL]=
 #GenericName[ru_RU]=
 #GenericName[sv_SE]=
@@ -27,7 +27,7 @@ Comment[ca]=Interfície gràfica per al magatzem de contrasenyes UNIX estàndard
 #Comment[gl_ES]=
 #Comment[he_IL]=
 #Comment[hu_HU]=
-Comment[nl_NL]=GUI voor de standaard unix wachtwoord opslag
+Comment[nl]=GUI voor de standaard Unix wachtwoordopslag
 #Comment[pl_PL]=
 #Comment[ru_RU]=
 #Comment[sv_SE]=
