--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ compiler:
 - gcc
 - clang
 env:
+  - TRAVIS_NODE_VERSION="10"
+env:
   global:
     secure: WaZq3f6KIAc0dnR4WOXYWDvUYiqlrzsZC/PQse47FnvC0oQC65J5w3kJOj/P26DgsUEqKQF3ukXogkM2mp5pS4+CMgivEmQmAbgQTtwcKpC5HPZxgI+8FgkCjcalJKWGWYoxlScNVNiKMs+89ApcSQE9kH9PZeUS9dukN2Php1U=
 before_install:
