Chaged QtPass to org.qtpass in Plist fixes #448

--- a/qtpass.plist
+++ b/qtpass.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string>icon.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>QtPass</string>
+	<string>org.qtpass</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
