Let's see if we can mesa up this Action

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -1,6 +1,6 @@
 name: C/C++ CI
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -11,6 +11,9 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install Qt
       uses: jurplel/install-qt-action@v1
+    - name: Install Linux packages
+      if: matrix.platform == 'ubuntu-latest'
+      run: sudo apt update && sudo apt install -y --no-install-recommends libgl1-mesa-dev
     - name: qmake
       run: qmake
     - name: make
