make check TESTARGS="--platform offscreen"

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -18,4 +18,4 @@ jobs:
     - name: make
       run: make
     - name: make check
-      run: make check
+      run: make check TESTARGS="--platform offscreen"
