--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -55,3 +55,5 @@ jobs:
           # The QT localization files are .ts
           VALIDATE_TYPESCRIPT_ES: false
           VALIDATE_TYPESCRIPT_STANDARD: false
+          # Copy/Paste Detector disabled for now, should re-enable after refactoring
+          VALIDATE_JSCPD: false
