--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -57,3 +57,5 @@ jobs:
           VALIDATE_TYPESCRIPT_STANDARD: false
           # Copy/Paste Detector disabled for now, should re-enable after refactoring
           VALIDATE_JSCPD: false
+          # cpplint is disabled for now since Google style is far off from ours
+          VALIDATE_CPP: false
