Script cat added

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -42,6 +42,7 @@ jobs:
           # list of changed files within `super-linter`
           fetch-depth: 0
 
+      - run: cat .github/super-linter.env >> "$GITHUB_ENV"
       ################################
       # Run Linter against code base #
       ################################
